--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -4,7 +4,7 @@
    xmlns:mvc="sap.ui.core.mvc">
    <Page title="{i18n>homePageTitle}" class="sapUiResponsiveContentPadding">
       <content>
-        <Button id="otherPageListBtn" text="{i18n>otherPage}" press=".onNavToOtherPage" class="sapUiTinyMarginEnd"/>
-		</content>
-	</Page>
+         <Button text="{i18n>iWantToNavigate}" class="sapUiTinyMarginEnd"/>
+      </content>
+   </Page>
 </mvc:View>
