--- a/webapp/view/ShellBarWithSplitApp.view.xml
+++ b/webapp/view/ShellBarWithSplitApp.view.xml
@@ -9,7 +9,8 @@
 				showMenuButton="true"
 				homeIcon="/images/sap_logo.svg"
 				menuButtonPressed="onMenuButtonPress"
-				showProductSwitcher="true">
+				showProductSwitcher="true"
+				productSwitcherPressed="loggedPopOver">
 				<f:profile>
 					<f:Avatar initials="A"/>
 				</f:profile>
@@ -19,10 +20,20 @@
 			</f:ShellBar>
 		</tnt:header>
 		<tnt:sideContent>
-			<tnt:SideNavigation expanded="true" selectedKey="{/selectedKey}" itemSelect="onItemSelect">
+			<tnt:SideNavigation expanded="true" 
+						selectedKey="{/selectedKey}" 
+						itemSelect="onItemSelect">
 				<tnt:NavigationList items="{path: '/navigation'}">
-					<tnt:NavigationListItem text="{title}" icon="{icon}" enabled="{enabled}" expanded="{expanded}" items="{items}" key="{key}">
-						<tnt:NavigationListItem text="{title}" key="{key}" enabled="{enabled}">
+					<tnt:NavigationListItem text="{title}" 
+											icon="{icon}" 
+											enabled="{enabled}" 
+											expanded="{expanded}" 
+											items="{items}" 
+											key="{key}">
+
+						<tnt:NavigationListItem text="{title}" 
+												key="{key}" 
+												enabled="{enabled}">
 						</tnt:NavigationListItem>
 					</tnt:NavigationListItem>
 				</tnt:NavigationList>
@@ -31,11 +42,11 @@
 		<tnt:mainContents>
 			<NavContainer id="pageContainer" initialPage="page1">
 				<pages>
-					<ScrollContainer id="page1" horizontal="false" vertical="true" height="100%">
+					<ScrollContainer id="page1" 
+									 horizontal="false" 
+									 vertical="true" 
+									 height="100%">
 						<App id="app"/>
-					</ScrollContainer>
-					<ScrollContainer id="root1" horizontal="false" vertical="true" height="100%">
-						<Text text="This is the root page"/>
 					</ScrollContainer>
 				</pages>
 			</NavContainer>
